[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/fray/editor/old/input_map/input_map_editor.gd" type="Script" id=1]
[ext_resource path="res://addons/fray/editor/old/input_map/select_bind_dialog.tscn" type="PackedScene" id=2]

[node name="Fray Input Map" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 1010.0
margin_bottom = 24.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/HBoxContainer"]
margin_right = 813.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/HBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
text = "Name:"

[node name="InputNameEdit" type="LineEdit" parent="HBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 46.0
margin_right = 813.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ErrorLabel" type="Label" parent="HBoxContainer/HBoxContainer"]
visible = false
margin_left = 614.0
margin_top = 5.0
margin_right = 813.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 0.470588, 0.419608, 1 )
text = "Input '%s' name already exists."

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/HBoxContainer"]
margin_left = 817.0
margin_right = 969.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="HBoxContainer/HBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 38.0
margin_bottom = 19.0
text = "Type: "

[node name="InputTypeSelection" type="OptionButton" parent="HBoxContainer/HBoxContainer/HBoxContainer2"]
margin_left = 42.0
margin_right = 152.0
margin_bottom = 24.0
rect_min_size = Vector2( 110, 0 )
text = "Bind"
items = [ "Bind", null, false, 0, null, "Combination", null, false, 1, null, "Conditional", null, false, 2, null ]
selected = 0

[node name="AddInputButton" type="Button" parent="HBoxContainer/HBoxContainer"]
margin_left = 973.0
margin_right = 1010.0
margin_bottom = 24.0
disabled = true
text = "Add"

[node name="HSplitContainer" type="HSplitContainer" parent="HBoxContainer"]
margin_top = 28.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/HSplitContainer"]
margin_right = 250.0
margin_bottom = 558.0
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 3

[node name="InputList" type="Tree" parent="HBoxContainer/HSplitContainer/ScrollContainer"]
margin_right = 250.0
margin_bottom = 558.0
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/HSplitContainer"]
margin_left = 262.0
margin_right = 1010.0
margin_bottom = 558.0

[node name="InputEditorTree" type="Tree" parent="HBoxContainer/HSplitContainer/MarginContainer"]
margin_right = 748.0
margin_bottom = 558.0
custom_constants/hseparation = 0
columns = 2
hide_root = true

[node name="Node" type="Control" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
mouse_filter = 2

[node name="SelectBindDialog" parent="Node" instance=ExtResource( 2 )]
rect_min_size = Vector2( 155, 110 )

[connection signal="text_changed" from="HBoxContainer/HBoxContainer/HBoxContainer/InputNameEdit" to="." method="_on_InputNameEdit_text_changed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/AddInputButton" to="." method="_on_AddInputButton_pressed"]
[connection signal="button_pressed" from="HBoxContainer/HSplitContainer/ScrollContainer/InputList" to="." method="_on_InputList_button_pressed"]
[connection signal="item_selected" from="HBoxContainer/HSplitContainer/ScrollContainer/InputList" to="." method="_on_InputList_item_selected"]
[connection signal="bind_selected" from="Node/SelectBindDialog" to="." method="_on_SelectBindDialog_bind_selected"]
